--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,24 @@
     "@stripe/stripe-js": "^7.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "socket.io-client": "^4.8.1"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.0",
+    "@types/node": "^22.13.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
