--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=
+REACT_APP_API_URL="http://localhost:3000/api/v1"
 REACT_APP_STRIPE_PUBLIC_KEY=
 REACT_APP_APP_NAME="AnythingToSell"
