--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.71.10",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
